-Y en el html solo se vinculo el script "tabs.js" 

4/11
MARCO
Reorganizacion del proyecto, con un arreglo del link en el html de electrecidad

ROBERTH
- refactorización y actualización del css del index
- eliminación de todos los demás archivos de css

FRAN
- index.html fue llevado a root para que github pages pueda abrirlo
- Todos los problemas de enrutamiento ocasionados por la reorganización de carpetas fueron resueltas.  
- se separaron los archivos css en una hoja de estilos general para todas las páginas, y las hojas específicas de cada página o conjunto.

FRAN B
- se solucionaron serios problemas con enrutamiento respecto de github pages. 

5/11
FRAN
- Agregados estilos generales a las páginas de especialidades + estilos de página de computación

MARCO
- Se agrego un boton despegable llamando Vistas de pruebas 

10/11
- Se arreglo botones de inicio 
MARCO
12/11
- Se cambio el titulo del index

18/11 
MARCO
- Se implementó en el sitio la primera vista con sus estilos y lógica de backend

FRAN
- Se corrigió error de enrutamiento en las páginas de especialidades, el cual no devolvía un error si se quería acceder de una de éstas a otra.
- Se añadieron imágenes de placeholder al carrusel de imágenes de la vista 1
- Se corrigió el enrutamiento en todas las páginas de la vista 1
- Se agregó un archivo de texto explicando cómo se deben enrutar los archivos apropiadamente

FRAN 2
- Se corrigió un error de enrutamiento, causa de no haber escrito ese archivo de texto antes.

19/11
ROBERTH 
-Se terminó la vista1, realizando el footer como se tenía en el mockup principal, también se cambiaron pequeños detalles.

MARCO
- Se agrego un cambio enl al funcionalidad de los tabs

20/11 
FRAN
Serie de correcciones pre-entrevista

Index: Se redujo la cantidad de vistas en el menú desplegable de cuatro a 2, porque sólo tenemos 2. También se cambió la imagen de fondo en el hero con la nueva fachada de la escuela. 

lol no llegué a anotar los demás cambios