@@ -4,7 +4,7 @@
   align-items: center;
   justify-content: center; 
   padding: 80px 100px;
-  background-color: #f3f7ff;
+  background-color: #eff4ff;
   background-image: url('../img/frenteCole.jpg'); 
   background-size: cover;
   background-position: center; 
@@ -21,23 +21,24 @@
 }
 
 .texto-principal h1 {
-  font-size: 2.3rem;
+  font-size: 2.5rem;
   color: #f5f8fc;
   margin-bottom: 20px;
 }
 
 .texto-principal p {
+  text-align: left;
   color: #f7fcff;
   line-height: 1.6;
   margin-bottom: 30px;
-  font-weight: 600;
+  font-weight: 650;
 }
 
 .botones-principales a {
   text-decoration: none;
   padding: 10px 22px;
-  border-radius: 25px;
-  font-weight: 500;
+  border-radius: 20px;
+  font-weight: 520;
   margin-right: 10px;
 }
 
