@@ -57,7 +57,7 @@
       </p>
       <div class="botones-principales">
         <a href="#especialidades" class="boton-primario">Ver Especialidades</a>
-        <a href="#contactos" class="boton-secundario">Contactar</a>
+        <a href="#contactos" class="boton-primario">Contactar</a>
         <li class="dropdown">
         <a href="#" class="boton-primario">Vistas de prueba <i class="fa-solid fa-caret-down"></i></a>
         <div class="dropdown-content">
